; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/urlmon/extr_bindctx.c_init_bindctx.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/urlmon/extr_bindctx.c_init_bindctx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i64, i32 }

@.str = private unnamed_addr constant [28 x i8] c"not supported options %08x\0A\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"format is not supported\0A\00", align 1
@BIND_MAYBOTHERUSER = common dso_local global i32 0, align 4
@STGM_READWRITE = common dso_local global i32 0, align 4
@STGM_SHARE_EXCLUSIVE = common dso_local global i32 0, align 4
@S_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64, i32*, i32*)* @init_bindctx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @init_bindctx(i32* %0, i64 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.TYPE_3__, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  %12 = load i64, i64* %7, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %4
  %15 = load i64, i64* %7, align 8
  %16 = call i32 (i8*, ...) @FIXME(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i64 %15)
  br label %17

17:                                               ; preds = %14, %4
  %18 = load i32*, i32** %9, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %22

20:                                               ; preds = %17
  %21 = call i32 (i8*, ...) @FIXME(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  br label %22

22:                                               ; preds = %20, %17
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  store i32 24, i32* %23, align 8
  %24 = load i32, i32* @BIND_MAYBOTHERUSER, align 4
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 3
  store i32 %24, i32* %25, align 8
  %26 = load i32, i32* @STGM_READWRITE, align 4
  %27 = load i32, i32* @STGM_SHARE_EXCLUSIVE, align 4
  %28 = or i32 %26, %27
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 1
  store i32 %28, i32* %29, align 4
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 2
  store i64 0, i64* %30, align 8
  %31 = load i32*, i32** %6, align 8
  %32 = call i32 @IBindCtx_SetBindOptions(i32* %31, %struct.TYPE_3__* %10)
  store i32 %32, i32* %11, align 4
  %33 = load i32, i32* %11, align 4
  %34 = call i64 @FAILED(i32 %33)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %38

36:                                               ; preds = %22
  %37 = load i32, i32* %11, align 4
  store i32 %37, i32* %5, align 4
  br label %53

38:                                               ; preds = %22
  %39 = load i32*, i32** %8, align 8
  %40 = icmp ne i32* %39, null
  br i1 %40, label %41, label %51

41:                                               ; preds = %38
  %42 = load i32*, i32** %6, align 8
  %43 = load i32*, i32** %8, align 8
  %44 = call i32 @RegisterBindStatusCallback(i32* %42, i32* %43, i32* null, i32 0)
  store i32 %44, i32* %11, align 4
  %45 = load i32, i32* %11, align 4
  %46 = call i64 @FAILED(i32 %45)
  %47 = icmp ne i64 %46, 0
  br i1 %47, label %48, label %50

48:                                               ; preds = %41
  %49 = load i32, i32* %11, align 4
  store i32 %49, i32* %5, align 4
  br label %53

50:                                               ; preds = %41
  br label %51

51:                                               ; preds = %50, %38
  %52 = load i32, i32* @S_OK, align 4
  store i32 %52, i32* %5, align 4
  br label %53

53:                                               ; preds = %51, %48, %36
  %54 = load i32, i32* %5, align 4
  ret i32 %54
}

declare dso_local i32 @FIXME(i8*, ...) #1

declare dso_local i32 @IBindCtx_SetBindOptions(i32*, %struct.TYPE_3__*) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @RegisterBindStatusCallback(i32*, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
